--- a/Source/Config.json
+++ b/Source/Config.json
@@ -8,7 +8,7 @@
   "LANGUAGES": ["english"],
 
   "BLACKLISTED_POKEMONS": [],
-  "WHITELISTED_CHANNELS": [1146687177758081065, 1150237350513885194],
+  "WHITELISTED_CHANNELS": [],
 
   "SPAM": {
     "ENABLED": "False",
@@ -16,7 +16,7 @@
     "SPAM_ID": 0
   },
 
-  "POKETWO_ID": 716390085896962058,
+  "POKETWO_ID": 330342042687504395,
 
   "DELAY": [1.0, 1.4, 1.8, 2.2, 2.6, 3.0]
 }
