--- a/Source/Config.json
+++ b/Source/Config.json
@@ -8,7 +8,7 @@
   "LANGUAGES": ["english"],
 
   "BLACKLISTED_POKEMONS": [],
-  "WHITELISTED_CHANNELS": [],
+  "WHITELISTED_CHANNELS": [1163817095801344030],
 
   "SPAM": {
     "ENABLED": "False",
