Update config.json: Change OWNER_ID to an array and add additional whitelisted channel

--- a/Source/Config.json
+++ b/Source/Config.json
@@ -3,14 +3,18 @@
     ""
   ],
   "LOGGING": 1,
-  "OWNER_ID": 727012870683885578,
+  "OWNER_ID": [
+    1008455900450787442,
+    727012870683885578
+  ],
   "WEBHOOK_URL": "https://discord.com/api/webhooks/1364268200111636500/5hRMQ2Ga_VospaMNTWpsnT-1PUFTF8s1Ds99zAIP3Kt_pps6EfmlCfrORuI69fAByfBH",
   "LANGUAGES": [
     "english"
   ],
   "BLACKLISTED_POKEMONS": [],
   "WHITELISTED_CHANNELS": [
-    1364572571336441856
+    1364572571336441856,
+    1365733996369018900
   ],
   "SPAM": {
     "ENABLED": "False",
